--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     </nav>
 
     <section class="hero">
-        <img src="471403526_950425263687345_4752628458633588643_n (1).jpg" alt="Profile" class="profile-img">
+        <img src="https://scontent.fjkr1-1.fna.fbcdn.net/v/t39.30808-6/471403526_950425263687345_4752628458633588643_n.jpg?_nc_cat=101&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeGHjomXngEDpX7qziiH2nN9kbtclFq8jvqRu1yUWryO-lTrDw6YcYcbijP8bGpVhE2cvRXgO0PxIfD7gXwOhqtP&_nc_ohc=Xy9ZrHDntpQQ7kNvgEHF1Eu&_nc_zt=23&_nc_ht=scontent.fjkr1-1.fna&_nc_gid=AoGcm2wnlTxgbQw5e1ghmYo&oh=00_AYDMgMr-paV-HB8MjVMyqO6SR0ra_oXZM75ZoEI07Fo5kA&oe=67A2BA70" alt="Profile" class="profile-img">
         <h1>Hello, I'm Roshan Singh</h1>
         <p> Model multiple collage (11th) Computer Science</p>
     </section>
@@ -81,13 +81,12 @@
             <br>
 
 </br>
-            <img src="FB_IMG_1726412562648.jpg"width="350px" height="450px">
+            <img src="https://scontent.fjkr1-1.fna.fbcdn.net/v/t39.30808-6/475326964_974088091321062_8251734530429708363_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=107&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeGeG87WzWxM_DQlDxp3o1gRgDrrAe89DO-AOusB7z0M7w3lNgk-btMaEsUL8nPF4K-aXb5yLxzlFrAdnYXIfcOh&_nc_ohc=6iwXduU5AucQ7kNvgEHLGbx&_nc_zt=23&_nc_ht=scontent.fjkr1-1.fna&_nc_gid=A-wFRoNqQ__fr_htDfOn8iA&oh=00_AYB0cmZtPpeg4mNL7qN3J6tC0hkX6d_Wl7MNVSoTeeuK3w&oe=67A2B84D"width="350px" height="450px">
 </br>
-<img src="FB_IMG_1730219673238.jpg"width="350px"height="500px">
-<img src="FB_IMG_1730223753467.jpg"width="350px"height="400px">
-<img src="FB_IMG_1730228998884.jpg"width="350px"height="400px">
-<img src="IMG_0590.JPG"width="350px"height="550px">
-<img src="IMG_8965.JPG"width="350px"height="530px">
+<img src="https://scontent.fjkr1-1.fna.fbcdn.net/v/t39.30808-6/475228514_974665911263280_2634186075837929896_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeGnVxLiRU_I9hftgQzJ3daHbs_D6YKpy_Zuz8PpgqnL9lPOvGI2X0PmDsA28e29Of07Xtr7wNWI6oWiO32CyGUr&_nc_ohc=CBWy1D8x_soQ7kNvgF4Ktot&_nc_zt=23&_nc_ht=scontent.fjkr1-1.fna&_nc_gid=AW3ToswUyOdsRDH4NuIbejP&oh=00_AYDFsNWGUaf7vbEOEm9Run8EteCWdW1yrzgq8Z0p0DUi1w&oe=67A2A783"width="350px"height="450px">
+<img src="https://scontent.fjkr1-1.fna.fbcdn.net/v/t39.30808-6/475243555_974668947929643_889879451276750551_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeG7YdbmL1YsMXG1pE7knogsIE8Ft6xkkKkgTwW3rGSQqce7JQdETHxduZQ2XdadnkB7NPjfjcup19TZqsVs1TSg&_nc_ohc=KAlxmpe-FesQ7kNvgG_HMeM&_nc_zt=23&_nc_ht=scontent.fjkr1-1.fna&_nc_gid=AUW4FbOMVi-PljGzpZ4t2DB&oh=00_AYDVCqQb02fVk6rk970LPcW6kS2giymuklFtM6BaXhR13A&oe=67A2CE95"width="350px"height="450px">
+<img src="https://scontent.fjkr1-1.fna.fbcdn.net/v/t39.30808-6/475794788_976257484437456_6916609555525749969_n.jpg?_nc_cat=108&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeERGJH8OgYG1dgdHghsyTDhc7u-O58pxA9zu747nynED_qOwCCCP-2XhLpHhDv8BTKTWtf1nlRF6PIsL_W53hGe&_nc_ohc=rGg4UlmsHDEQ7kNvgG1fxRG&_nc_zt=23&_nc_ht=scontent.fjkr1-1.fna&_nc_gid=ACmsG-5a9O-lLhfWuuLOUcH&oh=00_AYC__QtvcPXKqo4qSzYUmXw1WRObPlgz7vUQrhKi4DSXyg&oe=67A2A9C6"width="400px"height="550px">
+<img src="https://scontent.fjkr1-1.fna.fbcdn.net/v/t39.30808-6/472313102_957673746295830_8798150907097312846_n.jpg?stp=cp6_dst-jpg_tt6&_nc_cat=104&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeGWW_0DwFJJ_8TuFL6skJ2d8veWh6qXRAzy95aHqpdEDAWo9mVnAjmqlnmPMSw8Km5IyHILYPchmxKSHJgXseAA&_nc_ohc=pVXM8rLKwYEQ7kNvgHcHQeb&_nc_zt=23&_nc_ht=scontent.fjkr1-1.fna&_nc_gid=APA9dgUJyK5phmBuSP0HhKv&oh=00_AYBBU4hY2d9gaG3RIG3WS35uNCJTDns7ndgwTyynHd1zcA&oe=67A2CB71"width="350px"height="530px">
 <br>
 
 
@@ -112,3 +111,4 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
+
